--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@
 # misc
 .DS_Store
 .env.local
+.env.local
+
+# Ignore the local Firebase config file containing API keys
+src/firebaseConfig.js
 .env.development.local
 .env.test.local
 .env.production.local
