--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bike2work-web",
+  "name": "bike2work",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://meneerdennis.github.io/bike2work",
@@ -18,11 +18,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-  "build": "react-scripts build",
-  "build:nosourcemap": "cross-env GENERATE_SOURCEMAP=false yarn build",
+    "build": "react-scripts build",
+    "build:nosourcemap": "cross-env GENERATE_SOURCEMAP=false yarn build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "yarn build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^10.1.0"
+    "cross-env": "^10.1.0",
+    "gh-pages": "^5.0.0"
   }
 }
